[package]
name = "dllloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
backtrace = "0.3.69"
cranelift = "0.100.0"
cranelift-codegen = "0.100.0"
cranelift-jit = "0.100.0"
cranelift-module = "0.100.0"
cranelift-native = "0.100.0"
derivative = "2.2.0"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
libc = "0.2.148"
memmap2 = "0.8.0"
nix = { version = "0.27.1", features = ["mman", "fs"] }
nt-list = "0.2.0"
nt-string = "0.1.1"
pelite = {path = "./pelite"}
pin-project = "1.1.3"
region = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wasmtime-jit-debug = { version = "13.0.0", features = ["gdb_jit_int"] }
widestring = "1.0.2"
